--- a/Blink-Cliente/public_html/index.html
+++ b/Blink-Cliente/public_html/index.html
@@ -59,15 +59,13 @@ and open the template in the editor.
             </div>
 
         </div>
-         
-
         <script src="js/jquery-1.11.1.min.js"></script>
         <script src="js/jquery.mobile-1.4.5.min.js"></script>
         <script src="js/blink.js" type="text/javascript"></script>
         <script src="phonegap.js" type="text/javascript"></script>
         <script type="text/javascript" charset="utf-8" src="PushNotification.js"></script>
         <script>
-
+            var lt, ln;
             $(document).ready(function () {
                 var cadena = $("#foot").html();
 
@@ -75,257 +73,14 @@ and open the template in the editor.
                 page.configBody();
                 page.diligencias();
                 app.crearDb();
+                
             });
 
             document.addEventListener("deviceready", onDeviceReady, false);
 
-
-                            function onDeviceReady() {
-                                /*$("#btnPopup").hide();
-
-                                var $this = $(this),
-                                        theme = $this.jqmData("theme") || $.mobile.loader.prototype.options.theme,
-                                        msgText = $this.jqmData("msgtext") || $.mobile.loader.prototype.options.text,
-                                        textVisible = $this.jqmData("textvisible") || $.mobile.loader.prototype.options.textVisible,
-                                        textonly = !!$this.jqmData("textonly");
-                                html = $this.jqmData("html") || "";
-                                $.mobile.loading("show", {
-                                    text: msgText,
-                                    textVisible: textVisible,
-                                    theme: theme,
-                                    textonly: textonly,
-                                    html: html
-                                });
-//                $("#contFecha").hide();
-//                $("#contHora").hide();
-//                FB.init({appId: "1428385527442767", nativeInterface: CDV.FB, useCachedDialogs: false});
-
-                                var dbExist = localStorage.getItem("dbExist");
-                                if (dbExist != "true") {
-                                    crearDb();
-                                }
-
-                                initPush();
-
-                                $("#mapa").height($(document).height() - $("#head").height() - $("#foot").height() - ($("#btnPopupDiligencia").height() * 3));
-                                navigator.geolocation.getCurrentPosition(function (position) {
-                                    var lat = position.coords.latitude;
-                                    var lng = position.coords.longitude;
-
-                                    var geocoder = new google.maps.Geocoder();
-                                    var yourLocation = new google.maps.LatLng(lat, lng);
-
-                                    ubicarMapa(lat, lng);
-                                    geocoder.geocode({'latLng': yourLocation}, processGeocoder);
-
-                                }, function () {
-                                    alert("Error al Obtener la Posición de su dispositivo, intente activar el GPS !");
-                                    location.href = "index.html";
-                                }, {enableHighAccuracy: true});
-*/
-                            }
-
-                            function processGeocoder(results, status) {
-                                if (status == google.maps.GeocoderStatus.OK) {
-                                    if (results[0]) {
-                                        var dir = results[0].formatted_address;
-                                        var array = dir.split(',');
-                                        localStorage.setItem("ubicacion", array[1]);
-                                        //$("#direccion").val(results[0].formatted_address);
-                                    } else {
-                                        alert("Error al Obtener Dirección");
-                                    }
-                                } else {
-                                    alert("Error al Obtener Dirección");
-                                }
-                            }
-
-                            function ubicarMapa(lat, lng) {
-                                mapa = new GMaps({
-                                    div: '#mapa',
-                                    lat: lat,
-                                    lng: lng,
-                                    zoom: 15,
-                                    zoomControl: false,
-                                    panControl: false,
-                                    streetViewControl: false,
-                                    mapTypeControl: false
-                                });
-
-                                agregarRuta(lat, lng);
-
-                            }
-
-                            function agregarRuta(lat, lng) {
-                                lt = lat;
-                                ln = lng;
-
-                                mapa.addMarker({
-                                    lat: lat,
-                                    lng: lng,
-                                    title: 'Mi ubicación',
-                                    animation: google.maps.Animation.DROP,
-                                    icon: "image/map-user.png"
-
-                                });
-                                $.mobile.loading("hide");
-
-                            }
-
-                            function envio() {
-
-                                var idUsuario = localStorage.getItem("idUsuario");
-                                var direccion = $("#direccion").val();
-                                var referencia = $("#referencias").val();
-                                var ciudad = localStorage.getItem("ubicacion");
-                                var servicio = $("input[name='servicio']:checked").val();
-                                var telefono = $("#telefono").val();
-                                var tipo = $("#tipo").val();
-                                var descripcion = $("#descripcion").val();
-                                var destino = $("#destino").val();
-                                var fecha = $("#fecha").val();
-                                var hora = $("#hora").val();
-
-                                if (direccion == "" || direccion == undefined || direccion == null || destino == "" || destino == undefined || destino == null || telefono == "" || telefono == undefined || telefono == null || descripcion == "" || descripcion == undefined || descripcion == null || tipo == "" || tipo == undefined || tipo == null || servicio == "" || servicio == undefined || servicio == null) {
-
-                                    alert("Por Favor Completa los Campos Obligatorios (*)");
-
-                                } else {
-
-                                    var $this = $(this),
-                                            theme = $this.jqmData("theme") || $.mobile.loader.prototype.options.theme,
-                                            msgText = $this.jqmData("msgtext") || $.mobile.loader.prototype.options.text,
-                                            textVisible = $this.jqmData("textvisible") || $.mobile.loader.prototype.options.textVisible,
-                                            textonly = !!$this.jqmData("textonly");
-                                    html = $this.jqmData("html") || "";
-
-                                    $.mobile.loading("show", {
-                                        text: msgText,
-                                        textVisible: textVisible,
-                                        theme: theme,
-                                        textonly: textonly,
-                                        html: html
-                                    });
-
-                                    $("#btnEnvio").attr("disabled", "disabled");
-
-                                    var data = {
-                                        idUsuario: idUsuario,
-                                        direccion: direccion,
-                                        referencia: referencia,
-                                        ciudad: ciudad,
-                                        lat: lt,
-                                        lng: ln,
-                                        servicio: servicio,
-                                        telefono: telefono,
-                                        tipo: tipo,
-                                        descripcion: descripcion,
-                                        destino: destino,
-                                        fecha: fecha,
-                                        hora: hora
-                                    };
-
-                                    var url = "http://admin.blinkmanager.com/restaurante/registrarServicio";
-
-                                    $.ajax({
-                                        type: "POST",
-                                        url: url,
-                                        data: data
-                                    })
-                                            .done(function (msg) {
-
-                                                var json = eval("(" + msg + ")");
-                                                if (json.msj == "exito") {
-                                                    alert("Tu Mensajero Llegará en cualquier momento a tu ubicación ");
-                                                    location.href = "index.html";
-                                                } else if (json.msj == "cerrado") {
-                                                    alert("TuDomicilio está cerrado consulta los horarios de operación !");
-                                                } else {
-                                                    alert("Error al hacer pedido, intenta mas tarde");
-                                                }
-                                                $.mobile.loading("hide");
-                                                $("#btnEnvio").removeAttr("disabled");
-
-                                            });
-
-                                }
-                            }
-                            function facebook() {
-                                $("#closeLogin").click();
-                                if (localStorage.getItem("idUsuario") != "" && localStorage.getItem("idUsuario") != null) {
-                                    envio();
-                                } else {
-                                    FB.login(
-                                            function (response) {
-
-                                                if (response.authResponse)
-                                                {
-                                                    getUserInfo(); // Get User Information.
-                                                } else
-                                                {
-                                                    alert
-                                                            ('Error al entrar con facebook, intentalo nuevamente, Recuerda: "No publicaremos nada a tu nombre"');
-                                                }
-                                            }, {scope: 'email,publish_actions'}
-                                    );
-                                }
-
-                            }
-                            function getUserInfo() {
-                                FB.api('/me', function (response) {
-
-                                    var regId = localStorage.getItem('regId');
-                                    if (regId != "" && regId != null) {
-                                        var persona = {idFace: response.id,
-                                            nombres: response.first_name,
-                                            apellidos: response.last_name,
-                                            email: response.email,
-                                            fechaNacimiento: response.birthday,
-                                            regId: regId
-                                        };
-                                    } else {
-                                        var persona = {idFace: response.id,
-                                            nombres: response.first_name,
-                                            apellidos: response.last_name,
-                                            email: response.email,
-                                            fechaNacimiento: response.birthday,
-                                            token: localStorage.getItem("token")
-                                        };
-                                    }
-
-                                    confirmarRegistro(persona);
-                                });
-                            }
-
-
-//Consulta en la bd del servidor si el usuario Existe... Sino Existe Lo agrega como nuevo usuario de la App
-                            function confirmarRegistro(persona) {
-                                //var url = "http://192.168.1.33/domicilios/restaurante/confirmarRegistroFace";
-                                var url = "http://admin.blinkmanager.com/restaurante/confirmarRegistroFace";
-
-                                $.ajax({
-                                    type: "POST",
-                                    url: url,
-                                    data: persona
-                                })
-                                        .done(function (msg) {
-                                            var json = eval("(" + msg + ")");
-                                            if (json.msj === "autenticado") {
-                                                localStorage.setItem('login', "true");
-                                                localStorage.setItem('idFace', persona.idFace);
-                                                localStorage.setItem('idUsuario', json.id);
-                                                envio();
-                                            } else if (json.msj === "registrado") {
-                                                alert("Registro Exitoso");
-                                                localStorage.setItem('login', "true");
-                                                localStorage.setItem('idFace', persona.idFace);
-                                                localStorage.setItem('idUsuario', json.id);
-                                                envio();
-                                            }
-                                        });
-                            }
+            function onDeviceReady() {
+                app.initPush();   
+            }
         </script>
-        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBOANqhrn5i6-jYE9XqXyaVClI0NvGLOQw&sensor=true&libraries=geometry"></script>
-        <script src="js/responsiveslides.min.js" type="text/javascript"></script>
     </body>
 </html>
