--- a/Blink-Cliente/public_html/mostrarRestaurante.html
+++ b/Blink-Cliente/public_html/mostrarRestaurante.html
@@ -66,6 +66,7 @@
 
     </div>
 </div>
+<script src="js/responsiveslides.min.js" type="text/javascript"></script>
 <script src="js/gmaps.js"></script>       
 <script>
     
