--- a/Blink-Cliente/public_html/index.html
+++ b/Blink-Cliente/public_html/index.html
@@ -87,6 +87,7 @@ and open the template in the editor.
            
                 if (confirm("Estas Seguro de salir de la app?")) {
                     /* Here is where my AJAX code for logging off goes */
+                    navigator.app.exitApp();
                 }
                 else {
                     return false;
