--- a/Blink-Cliente/public_html/carrito.html
+++ b/Blink-Cliente/public_html/carrito.html
@@ -313,7 +313,8 @@
                                                 alert("Blink está cerrado consulta los horarios de operación !");
 
                                             } else {
-                                                alert("Error");
+                                                //alert("Error");
+                                                alert(msg);
                                             }
                                             $("#btnEnvio").removeAttr("disabled");
                                             $.mobile.loading("hide");
