--- a/Blink-Cliente/public_html/diligenciasForm.html
+++ b/Blink-Cliente/public_html/diligenciasForm.html
@@ -18,7 +18,7 @@
     <input type="text" name="referencias" id="referencias" placeholder="Ej: Sicarare, Junto al Parque Blanco" value="">
 </div>
 <div class="ui-field-contain">
-        <label for="telefono"><b>*Nombres:</b></label>
+        <label for="nombre"><b>*Nombres:</b></label>
         <input type="text" name="nombre" id="nombre" placeholder="Nombres" value="">
 </div>
 <div class="ui-field-contain">
