--- a/Blink-Cliente/public_html/carrito.html
+++ b/Blink-Cliente/public_html/carrito.html
@@ -9,7 +9,7 @@
         <br>
         <br>
         <a href="#" onclick="page.mostrarRestaurante();" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-eye ui-btn-icon-right">Ver sitio</a>
-        <a href="#popupPedido" id="btnPopupPedido" data-rel="popup" data-position-to="window" data-transition="flow" style="background-color: #84aa1f; color: white; text-decoration: none;text-shadow: none" class="ui-btn ui-shadow ui-corner-all ui-icon-check ui-btn-icon-right">Hacer Pedido</a>
+        <a href="#popupPedido" id="btnPopupPedido" data-rel="popup" data-position-to="window" style="background-color: #84aa1f; color: white; text-decoration: none;text-shadow: none" class="ui-btn ui-shadow ui-corner-all ui-icon-check ui-btn-icon-right">Hacer Pedido</a>
         <a style="background-color: #be1522; color: white; text-decoration: none;text-shadow: none" href="#" onclick="borrarCarrito()" data-ajax="false" class="ui-btn ui-shadow ui-corner-all ui-icon-delete ui-btn-icon-right">Borrar Pedido</a>
     </div>
 
@@ -308,13 +308,15 @@
                                             if (json.msj == "exito") {
                                                 alert("Tu pedido Llegará en cualquier momento ! ");
                                                 borrarCarrito();
-                                                 $("#close2").click();
+                                                $("#popupPedido").popup("close");
+                                                 //$("#close2").click();
 
                                             }else if (json.msj == "cerrado") {
                                                 alert("Blink está cerrado consulta los horarios de operación !");
-                                                $("#close2").click();
+                                                $("#popupPedido").popup("close");
+                                                //$("#close2").click();
                                             } else {
-                                                alert("Error");
+                                                alert("Error, Intenta mas tarde !");
                                                 //alert(msg);
                                             }
                                             $("#btnEnvio").removeAttr("disabled");
