--- a/Blink-Cliente/public_html/index.html
+++ b/Blink-Cliente/public_html/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <!--
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
